--- a/MagicProject/views/layout/page.ejs
+++ b/MagicProject/views/layout/page.ejs
@@ -8,6 +8,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
 </head>
     <body>
+        <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+            <div class="container-fluid">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Главная</a>
+                </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Огонь</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Ветер</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Вода</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         <%- body %>
     </body>
 </html>
