--- a/MagicProject/views/layout/page.ejs
+++ b/MagicProject/views/layout/page.ejs
@@ -12,16 +12,16 @@
             <div class="container-fluid">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Главная</a>
+                  <a class="nav-link" href="/">Главная</a>
                 </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Огонь</a>
+                  <a class="nav-link" href="/fire">Огонь</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Ветер</a>
+                  <a class="nav-link" href="/wind">Ветер</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Вода</a>
+                  <a class="nav-link" href="/water">Вода</a>
                 </li>
               </ul>
             </div>
