Провел чистку кода и подключил данные из бд к навигации

--- a/MagicProject/views/layout/page.ejs
+++ b/MagicProject/views/layout/page.ejs
@@ -15,13 +15,13 @@
                   <a class="nav-link" href="/">Главная</a>
                 </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/fire">Огонь</a>
+                  <a class="nav-link" href="/elems/fire">Огонь</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/wind">Ветер</a>
+                  <a class="nav-link" href="/elems/wind">Ветер</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/water">Вода</a>
+                  <a class="nav-link" href="/elems/water">Вода</a>
                 </li>
               </ul>
             </div>
