--- a/MagicProject/views/layout/page.ejs
+++ b/MagicProject/views/layout/page.ejs
@@ -19,9 +19,8 @@
                   </li>
                   <% })} %>
               </ul>
-            </div>
-          </nav>
-       
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logreg">Войти</a></li>
               </ul>
             </div>
           </nav>
