--- a/MagicProject/views/layout/page.ejs
+++ b/MagicProject/views/layout/page.ejs
@@ -20,7 +20,13 @@
                   <% })} %>
               </ul>
               <ul class="nav navbar-nav navbar-right">
+                <%if(user){%>
+                  <form action="/logout" method="post">
+                    <li><button type="submit" class="btn btnlink">Выйти</button></li>
+                    </form>
+                <% } else { %>
                 <li><a href="/logreg">Войти</a></li>
+                <% } %>
               </ul>
             </div>
           </nav>
